syntax = "proto2";

package hourai.db.proto;

message MessageComponentProto {
  oneof {
    VerificationButton verification_button = 1
    MusicButton music_button = 2;
  }
}

// NEXT ID: 4
enum VerificationButtonOption {
  UNSPECIFIED = 0;
  VERIFY = 1;
  KICK = 2;
  BAN = 3;
}

// NEXT ID: 3
message VerificationButton {
  optional /* actually required */ VerficationButtonOption button_option = 1;
  optional /* actually required */ fixed64 user_id = 2;
}

// NEXT ID: 7
enum MusicButtonOption {
  UNSPECIFIED = 0;
  PLAY = 1;
  PAUSE = 2;
  STOP = 3;
  NEXT_TRACK = 4;
  QUEUE_NEXT_PAGE = 5;
  QUEUE_LAST_PAGE = 6;
}

// NEXT ID: 3
enum MusicUIType {
  UNSPECIFIED = 0;
  NOW_PLAYING = 1;
  QUEUE = 2;
}

// NEXT ID: 3
message MusicButton {
  optional /* actually required */ MusicUIType type = 1;
  optional /* actually required */ MusicButtonOption button_option = 2;
}
